--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
   "python.defaultInterpreterPath": "./.venv/bin/python",
-  "python.formatting.provider": "black",
-  "workbench.colorTheme": "Default Dark+"
+  "python.formatting.provider": "black"
 }
