--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,26 @@
-anyio==3.6.2
-attrs==22.2.0
-black==23.1.0
-blinker==1.4
+black==23.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
-command-not-found==0.3
-cryptography==3.4.8
-dbus-python==1.2.18
-distro==1.7.0
-distro-info===1.1build1
-dnspython==2.3.0
-email-validator==1.3.1
-exceptiongroup==1.1.1
-fastapi==0.95.0
-greenlet==2.0.2
-h11==0.14.0
-httpcore==0.16.3
-httplib2==0.20.2
-httptools==0.5.0
-httpx==0.23.3
+greenlet==2.0.1
 idna==3.4
-importlib-metadata==4.6.4
-iniconfig==2.0.0
-itsdangerous==2.1.2
-jeepney==0.7.1
-Jinja2==3.1.2
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-MarkupSafe==2.1.2
-more-itertools==8.10.0
-msgpack==1.0.4
+keyboard==0.13.5
+MouseInfo==0.1.3
 mypy-extensions==1.0.0
-netifaces==0.11.0
-oauthlib==3.2.0
-orjson==3.8.8
 packaging==23.0
 pathspec==0.11.1
-platformdirs==3.1.1
-pluggy==1.0.0
-psycopg2-binary==2.9.5
-pycodestyle==2.10.0
-pydantic==1.10.7
-PyGObject==3.42.1
-PyJWT==2.3.0
-pynvim==0.4.3
-pyparsing==2.4.7
-pytest==7.2.2
-python-apt==2.4.0+ubuntu1
+Pillow==9.4.0
+platformdirs==3.2.0
+playwright==1.32.1
+pyee==9.0.4
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+PyScreeze==0.1.28
 python-dotenv==1.0.0
-python-multipart==0.0.6
-PyYAML==5.4.1
+python3-xlib==0.15
+pytweening==1.0.4
 requests==2.28.2
-rfc3986==1.5.0
-SecretStorage==3.3.1
-six==1.16.0
-sniffio==1.3.0
-SQLAlchemy==2.0.7
-starlette==0.26.1
-systemd-python==234
-tomli==2.0.1
 typing_extensions==4.5.0
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-ujson==5.7.0
-unattended-upgrades==0.1
 urllib3==1.26.15
-uvicorn==0.21.1
-uvloop==0.17.0
-wadllib==1.3.6
-watchfiles==0.18.1
-websockets==10.4
-zipp==1.0.0
